2010-07-28  Antonio Gomes  <tonikitoo@webkit.org>

        Rubber-stamped by Kenneth Christiansen.

        More Developer menu items reordering.

        Grouping related menu items together, visually and logically (in the code).

        No behavior change.

        * QtTestBrowser/main.cpp:
        (LauncherWindow::createChrome):

2010-07-27  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Ojan Vafai.

        Add FILE_SYSTEM build flag for FileSystem API
        https://bugs.webkit.org/show_bug.cgi?id=42915

        * Scripts/build-webkit:

2010-07-27  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by David Levin.

        Stylebot should not complain about NULL usage in calls to gdk_pixbuf_save_to
        https://bugs.webkit.org/show_bug.cgi?id=43090

        * Scripts/webkitpy/style/checkers/cpp.py: Add exemption for some GdkPixbuf methods.
        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Added some tests for this behavior.

2010-07-27  Kent Tamura  <tkent@chromium.org>

        Unreviewed, trivial typo fix.

        * Scripts/webkitpy/layout_tests/port/chromium.py:
          Fix a wrong method name committed by r64109.

2010-07-27  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Patch for https://bugs.webkit.org/show_bug.cgi?id=43087
        Clean up handling of strings at the WebKit2 API layer.

        * MiniBrowser/mac/BrowserWindowController.m:
        (runJavaScriptAlert):
        (runJavaScriptConfirm):
        (runJavaScriptPrompt):
        (didNavigateWithNavigationData):
        (-[BrowserWindowController updateProvisionalURLForFrame:]):
        * MiniBrowser/mac/WebBundle/WebBundleMain.m:
        (_didClearWindowForFrame):

2010-07-27  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        webkit-patch post-commits is broken: AttributeError: Values instance has no attribute 'no_squash'
        https://bugs.webkit.org/show_bug.cgi?id=42984
