@@ -68,6 +68,13 @@ class InstallChromiumDependencies(shell.ShellCommand):
     command = ["perl", "./WebKitTools/Scripts/update-webkit-chromium", "--force"]
     haltOnFailure = True
 
+class CleanupChromiumLinuxCrashLogs(shell.ShellCommand):
+    name = "cleanup crash logs"
+    description = ["removing crash logs"]
+    descriptionDone = ["removed crash logs"]
+    command = ["sh", "-c", "rm -rf /tmp/.org.chromium.*"]
+    haltOnFailure = False
+
 
 def appendCustomBuildFlags(step, platform):
     if platform in ('gtk', 'wx', 'qt', 'chromium'):
@@ -343,7 +350,7 @@ class Factory(factory.BuildFactory):
         if platform == "win":
             self.addStep(KillOldProcesses)
             self.addStep(InstallWin32Dependencies)
-        if platform == "chromium":
+        if platform.startswith("chromium"):
             self.addStep(InstallChromiumDependencies)
 
 class BuildFactory(Factory):
@@ -375,8 +382,10 @@ class BuildAndTestFactory(Factory):
     TestClass = RunWebKitTests
     def __init__(self, platform, configuration, architectures):
         Factory.__init__(self, platform, configuration, architectures, False)
+        if platform == "chromium-linux":
+            self.addStep(CleanupChromiumLinuxCrashLogs)
         self.addStep(CompileWebKit)
-        if platform != "chromium":
+        if not platform.startswith("chromium"):
             self.addStep(RunJavaScriptCoreTests)
         self.addStep(self.TestClass)
         # Tiger's Python 2.3 is too old.  WebKit Python requires 2.5+.
